fixed search box on small screens

--- a/courses/2740/morcombe-slant-honeyplace/css/styles.css
+++ b/courses/2740/morcombe-slant-honeyplace/css/styles.css
@@ -381,17 +381,17 @@ header h1 {
 header h2 {
   font-weight: 400;
   margin-top: .5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 3.5rem;
 }
 
 header p {
   border: 1px solid #303030;
-  padding: .25rem 10rem .25rem .5rem;
+  padding: .25rem 8rem .25rem .5rem;
   margin-top: 4rem;
   margin-bottom: 1rem;
   position: absolute;
   bottom: 0;
-  right: 0;
+  right: 1vw;
   background-color: #f4f4f5;
 }
 
@@ -704,6 +704,9 @@ footer .social a:hover {
 @media only screen and (min-width: 35rem) {
   /* body*/
   /*header*/
+  header h2 {
+    margin-bottom: 1rem;
+  }
   /*navigation for tablet, desktop, floating left */
   nav ul {
     margin-left: 2%;
