--- a/courses/2740/morcombe-slant-honeyplace/scss/_medium.scss
+++ b/courses/2740/morcombe-slant-honeyplace/scss/_medium.scss
@@ -2,6 +2,10 @@
 
 /*header*/ 
 
+header h2 {
+    margin-bottom: 1rem;
+}
+
 /*navigation for tablet, desktop, floating left */ 
 
 nav ul {margin-left: 2%;}
