--- a/courses/2740/morcombe-slant-honeyplace/scss/_small.scss
+++ b/courses/2740/morcombe-slant-honeyplace/scss/_small.scss
@@ -32,16 +32,16 @@ header {
     h2 {
         font-weight: $baseFontWeight;
         margin-top: .5rem;
-        margin-bottom: .5rem;
+        margin-bottom: 3.5rem;
     }
     p {
         border: 1px solid $textColor;
-        padding: .25rem 10rem .25rem .5rem;
+        padding: .25rem 8rem .25rem .5rem;
         margin-top: 4rem;
         margin-bottom: 1rem;
         position: absolute;
         bottom: 0;
-        right: 0;
+        right: $gutter;
         background-color: lighten($mainColor, 15%);
        
     }
